# blog-chat

./: .env.example  .gitignore  .pdm-python  Dockerfile  README.md  alembic.ini  chat.db  docker-compose.yml  example.env  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.js
content/: Blog chat.md  blog-chat-idea.md  index.md
content/blog/: blog-chat-idea.md
docs/: PRD.md  architecture.md  design.md  index.md  setup.md  todos.md
src/blog_chat/: app.py  database.py  htmx.d.ts  main.py  main.ts  theme.ts  weather.py  ws-handlers.ts
src/blog_chat/core/: base.py  config.py  database.py  filters.py  html.py  responses.py
src/blog_chat/core/client/: main.ts  navigation.css  posts.css
src/blog_chat/features/accounts/: models.py  routes.py
src/blog_chat/features/accounts/templates/: cleared_user.html  invalid_user.html
src/blog_chat/features/chat/: models.py  routes.py  services.py  websocket.py
src/blog_chat/features/chat/client/: main.css  main.ts  ws-handlers.ts
src/blog_chat/features/chat/templates/: chat.html  message.html  ws_connected.html
src/blog_chat/features/posts/: parser.py  routes.py  services.py
src/blog_chat/features/posts/client/: main.css  main.ts  markdown.css
src/blog_chat/features/posts/templates/: base.html  index.html  post.html
src/blog_chat/migrations/: env.py
src/blog_chat/migrations/versions/: a2cfa0d6c02a_create_users_and_messages_tables.py
src/blog_chat/styles/: main.css  navigation.css  posts.css
src/blog_chat/templates/: base.html  chat.html  index.html  post.html  ws_connected.html
src/types/: htmx.d.ts
tests/test_core/: test_base.py  test_filters.py  test_html.py  test_responses.py
tests/test_features/test_posts/: test_parser.py
